force-app/main/default/objects/Unit__c/fields/AddressNo__c.field-meta.xml
<CustomField>
    <fullName>AddressNo__c</fullName>
    <description>เลขที่ห้อง (Unit No.)</description>
    <label>Address No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>