force-app/main/default/objects/Unit__c/fields/AreaSqm__c.field-meta.xml
<CustomField>
    <fullName>AreaSqm__c</fullName>
    <description>พื้นที่ของห้อง</description>
    <label>Area (Sq.m.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>