force-app/main/default/objects/Unit__c/fields/Availableforforeigner__c.field-meta.xml
<CustomField>
    <fullName>Availableforforeigner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ห้องนี้สามารถถูกซื้อได้โดยชาวต่างชาติหรือไม่</description>
    <label>Available for foreigner</label>
    <type>Checkbox</type>
</CustomField>