force-app/main/default/objects/Unit__c/fields/CompuUnitID__c.field-meta.xml
<CustomField>
    <fullName>CompuUnitID__c</fullName>
    <description>เลข ID ของ unit นี้ในระบบ Compu</description>
    <externalId>true</externalId>
    <label>Compu Unit ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>