force-app/main/default/objects/Unit__c/fields/CoordY__c.field-meta.xml
<CustomField>
    <fullName>CoordY__c</fullName>
    <description>พิกัดแกน Y ใน Master Plan</description>
    <label>CoordY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>