force-app/main/default/objects/Unit__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ชื่อ Floor ที่ Unit นี้อยู่</description>
    <label>Floor</label>
    <referenceTo>Floor__c</referenceTo>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>