force-app/main/default/objects/Unit__c/fields/FloorName__c.field-meta.xml
<CustomField>
    <fullName>FloorName__c</fullName>
    <formula>Floor__r.Name</formula>
    <label>FloorName</label>
    <type>Text</type>
</CustomField>