force-app/main/default/objects/Unit__c/fields/Furnished__c.field-meta.xml
<CustomField>
    <fullName>Furnished__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ห้้องนี้มี Furniture ตกแต่งเพิ่มเติมหรือไม่</description>
    <label>Furnished</label>
    <type>Checkbox</type>
</CustomField>