force-app/main/default/objects/Unit__c/fields/Houseno__c.field-meta.xml
<CustomField>
    <fullName>Houseno__c</fullName>
    <description>บ้านเลขที่</description>
    <label>House no.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>