force-app/main/default/objects/Unit__c/fields/Landno__c.field-meta.xml
<CustomField>
    <fullName>Landno__c</fullName>
    <description>แปลงที่ดินเลขที่</description>
    <label>Land no.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>