force-app/main/default/objects/Unit__c/fields/MofsSqm__c.field-meta.xml
<CustomField>
    <fullName>MofsSqm__c</fullName>
    <description>พื้นที่ Mofs</description>
    <label>Mofs (Sq.m.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>