force-app/main/default/objects/Unit__c/fields/PrivateParkingSlots__c.field-meta.xml
<CustomField>
    <fullName>PrivateParkingSlots__c</fullName>
    <description>จำนวนที่จอดรถส่วนบุคคล</description>
    <label>Private Parking Slots</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>