force-app/main/default/objects/Unit__c/fields/PrivateParkingSqm__c.field-meta.xml
<CustomField>
    <fullName>PrivateParkingSqm__c</fullName>
    <description>พื้นที่จอดรถส่วนบุคคล</description>
    <label>Private Parking (Sq.m.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>