force-app/main/default/objects/Unit__c/fields/PrivateParkingTHB__c.field-meta.xml
<CustomField>
    <fullName>PrivateParkingTHB__c</fullName>
    <description>มูลค่ารวมที่จอดรถส่วนบุคคล</description>
    <label>Private Parking (THB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>