force-app/main/default/objects/Unit__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>ชื่อ Project ที่ Unit นี้อยู่</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Units</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>