force-app/main/default/objects/Unit__c/fields/ProjectCode__c.field-meta.xml
<CustomField>
    <fullName>ProjectCode__c</fullName>
    <formula>Project__r.ProjectCode__c</formula>
    <label>Project Code</label>
    <type>Text</type>
</CustomField>