force-app/main/default/objects/Unit__c/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <description>ประเภทของ Project
CD = คอนโด
-CD = จำนงจอง คอนโด
FB = อาคารสำนักงาน
FD = อาคารชุดสำนักงาน
HF = โฮม ออฟฟิศ
HM = ทาวน์โฮม
HS = ทาวน์เฮ้าส์
KN = ไซมิส คิน
-KN = จำนงจอง บ้านคิน
LA = ที่ดินเปล่า
SH = อาคารพาณิชย์
SP = อาคารชุดพาณิชย์</description>
    <label>Project Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>คอนโด</fullName>
            </value>
            <value>
                <fullName>จำนงจอง คอนโด</fullName>
            </value>
            <value>
                <fullName>อาคารสำนักงาน</fullName>
            </value>
            <value>
                <fullName>อาคารชุดสำนักงาน</fullName>
            </value>
            <value>
                <fullName>โฮม ออฟฟิศ</fullName>
            </value>
            <value>
                <fullName>ทาวน์โฮม</fullName>
            </value>
            <value>
                <fullName>ทาวน์เฮ้าส์</fullName>
            </value>
            <value>
                <fullName>ไซมิส คิน</fullName>
            </value>
            <value>
                <fullName>จำนงจอง บ้านคิน</fullName>
            </value>
            <value>
                <fullName>ที่ดินเปล่า</fullName>
            </value>
            <value>
                <fullName>อาคารพาณิชย์</fullName>
            </value>
            <value>
                <fullName>อาคารชุดพาณิชย์</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>