force-app/main/default/objects/Unit__c/fields/ReservationTypeCode__c.field-meta.xml
<CustomField>
    <fullName>ReservationTypeCode__c</fullName>
    <description>ประเภทใบจอง</description>
    <label>Reservation Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R1-ใบจำนงจอง คอนโดมิเนียม</fullName>
            </value>
            <value>
                <fullName>R2-ใบจำนงจอง บ้าน</fullName>
            </value>
            <value>
                <fullName>R3-ใบจอง คอนโดมิเนียม</fullName>
            </value>
            <value>
                <fullName>R4-ใบจอง บ้าน</fullName>
            </value>
            <value>
                <fullName>R5-ใบจอง เฉพาะที่ดิน</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>