force-app/main/default/objects/Unit__c/fields/Rowno__c.field-meta.xml
<CustomField>
    <fullName>Rowno__c</fullName>
    <description>แถวที่</description>
    <label>Row no.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>