force-app/main/default/objects/Unit__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <description>รหัส Sub Business Unit</description>
    <label>SBU</label>
    <length>10</length>
    <type>Text</type>
</CustomField>