force-app/main/default/objects/Unit__c/fields/TotalAreaSqm__c.field-meta.xml
<CustomField>
    <fullName>TotalAreaSqm__c</fullName>
    <description>ตารางเมตร</description>
    <label>Total Area (Sq.m.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>