force-app/main/default/objects/Unit__c/fields/TotalAreaSqw__c.field-meta.xml
<CustomField>
    <fullName>TotalAreaSqw__c</fullName>
    <description>พื้นที่ทั้งหมด</description>
    <label>Total Area (Sq.w.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>