force-app/main/default/objects/Unit__c/fields/UnitCode__c.field-meta.xml
<CustomField>
    <fullName>UnitCode__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>รหัสของ Unit นี้</description>
    <externalId>true</externalId>
    <label>Unit Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>