force-app/main/default/objects/Unit__c/fields/UnitExternalID__c.field-meta.xml
<CustomField>
    <fullName>UnitExternalID__c</fullName>
    <description>รหัสของ Unit นี้ เพื่อใช้อ้างอิงในระบบ Salesforce
= ProjectCode+PhaseName+FloorName_UnitCode</description>
    <externalId>true</externalId>
    <label>Unit External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>