force-app/main/default/objects/Unit__c/fields/UnitFor__c.field-meta.xml
<CustomField>
    <fullName>UnitFor__c</fullName>
    <formula>IF( Availableforforeigner__c,&apos;This unit is for Foreigner and Thai&apos;,&apos;This unit is for Thai only &apos; )</formula>
    <label>Unit For</label>
    <type>Text</type>
</CustomField>