force-app/main/default/objects/Unit__c/fields/UnitStatus__c.field-meta.xml
<CustomField>
    <fullName>UnitStatus__c</fullName>
    <description>สถานะของ Unit</description>
    <label>Unit Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Not For Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>