force-app/main/default/objects/Unit__c/fields/UnitType__c.field-meta.xml
<CustomField>
    <fullName>UnitType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>ชื่ื่อ Unit Type ของ Unit นี้</description>
    <label>Unit Type</label>
    <referenceTo>UnitType__c</referenceTo>
    <relationshipName>Units</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>