force-app/main/default/objects/Unit__c/fields/UnlockDatetime__c.field-meta.xml
<CustomField>
    <fullName>UnlockDatetime__c</fullName>
    <description>เวลาที่จะปลดล็อก unit</description>
    <label>Unlock Datetime</label>
    <type>DateTime</type>
</CustomField>