force-app/main/default/objects/Unit__c/fields/UsageArea__c.field-meta.xml
<CustomField>
    <fullName>UsageArea__c</fullName>
    <description>พื้นที่ส่วนใช้งาน</description>
    <label>Usage Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>