force-app/main/default/objects/Unit__c/fields/UtilityAreaSqm__c.field-meta.xml
<CustomField>
    <fullName>UtilityAreaSqm__c</fullName>
    <description>พื้นที่ใช้สอย</description>
    <label>Utility Area(Sq.m.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>