force-app/main/default/objects/Unit__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <description>Plus 2 Year</description>
    <formula>date(YEAR(Transfer_Date__c ) + 2,month(Transfer_Date__c ),day(Transfer_Date__c ))-1</formula>
    <label>Warranty</label>
    <type>Date</type>
</CustomField>