force-app/main/default/objects/Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>UnitStatus__c</columns>
    <columns>Availableforforeigner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Unit</label>
</ListView>